
 - Instead of sharing a single string buffer (cl_env.token), ECL now has a pool
   of small strings which can be used for temporary operations. This fixes a
   number of problems with the reader.

 - DIRECTORY would always match NIL entries, independent of the mask. Now, the
   following two statements differ:
	(directory "foo*")       => ("foo")
	(directory "foo*.*")     => ("foo" "foo.log")

 - The code in contrib/sockets.lisp was not compatible with C++ because of
   multiple implicit pointer conversions, and additionally it had some pointer
   miscalculations.

 - GET-INTERNAL-REAL-TIME now works on Windows with 1/60s precision
   (contributed by Dustin Long)

 - When :INITFORM was a constant variable but not self evaluating (i.e. not T,
   NIL, or a keyword), it was not processed properly
	(defclass a () ((a :initform most-positive-fixnum)))
	(slot-value (make-instance a) 'a) => most-positive-fixnum

 - The namestring "." was improperly parsed has having file type "".

 - Now the file type is determined by the last dot in the name.
	(pathname-type "foo.mpq.txt") => "txt"

 - When iterating over a hash table we now check that the argument is really a
   hash table.

 - *COMPILE-VERBOSE* and *COMPILE-PRINT* now also have effect when compiling
   isolated lambda forms using COMPILE. Additionally, these variables are
   defined even without the compiler loaded.

 - DESCRIBE was not prepare for the number range types returned by TYPE-OF.

* Visible changes:

 - EXT:PROCESS-COMMAND-ARGS now allows for a default rule.

 - Variable EXT:*HELP-MESSAGE* and EXT:+DEFAULT-COMMAND-ARG-RULES+ exported.

 - C:BUILD-PROGRAM now uses a unique prefix for the initialization function,
   init_ECL_PROGRAM, to avoid collisions when both the program and a component
   have the same name:
	(C:BUILD-PROGRAM "ls" :lisp-files '("ls.o"))

* Contributed code:

 - New examples: cmdline/ls.lsp, ffi/uffi.lsp

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***